k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2401082-videosummdocker
  namespace: 2401082-videosummdocker
  labels:
    app: 2401082-videosummdocker

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: 2401082-videosummdocker

  template:
    metadata:
      labels:
        app: 2401082-videosummdocker

    spec:
      terminationGracePeriodSeconds: 20

      imagePullSecrets:
        - name: regcred

      containers:
        - name: 2401082-videosummdocker
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401082-videosummdocker/2401082-videosummdocker:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /login
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
